# par_qr_3d

./: .gitignore  CLAUDE.md  Makefile  README.md  config.toml  pyproject.toml  pyrightconfig.json  temp.txt
.claude/commands/: cleanup_claude.md  par_todo.md
.github-disabled/workflows/: build.yml  publish-dev.yml  publish.yml  release.yml
src/par_qr_3d/: __init__.py  __main__.py  check_stl.py  qr_generator.py  stl_converter.py
src/par_qr_3d/utils/: __init__.py  color_utils.py  font_utils.py  image_utils.py  mesh_utils.py  path_utils.py  platform_utils.py  validation_utils.py
